      "ps2write"} for \file{.ps} and \file{.eps} files.  This is
      available in Ghostscript 9.x (since 2010) whereas the previous
      default, \code{format = "pswrite"}, was removed in 9.10.

      \item For consistency with \code{[dpqr]norm()},
      \code{[dp]lnorm(sdlog = 0)} model a point mass at
      \code{exp(mulog)} rather than return \code{NaN} (for an error).
    }
  }
  
  \subsection{INSTALLATION and INCLUDED SOFTWARE}{
    \itemize{
      \item When building \R as a shared library, the
      \option{-L${R_HOME}/lib${R_ARCH}} flag is placed earlier in the
      link commands used during installation and when packages are
      installed: this helps ensure that the current build has priority if
      an \R shared library has already been installed by e.g.
      \command{install-libR} in a library mentioned in \env{LDFLAGS}
      (and not in \sQuote{your system's library directory} as
      documented). (Wish of \PR{15790}.)
      
      \item LaTeX package \pkg{upquote} is no longer required for \R's
      use of \pkg{inconsolata}.
    }
  }
  
  \subsection{BUG FIXES}{
    \itemize{
      \item \code{dmultinom()} did not handle non-finite probabilities
      correctly.

      \item \code{prettyNum(x, zero.print=*)} now also works when
      \code{x} contains \code{NA}s.
    }
  }
}

\section{\Rlogo CHANGES IN R 3.1.1}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item When \code{attach()} reports conflicts, it does so
      compatibly with \code{library()} by using \code{message()}.

      \item \command{R CMD Sweave} no longer cleans any files by
      default, compatibly with versions of \R prior to 3.1.0.  There are
      new options \option{--clean}, \option{--clean=default} and
      \option{--clean=keepOuts}.

      \item \code{tools::buildVignette()} and \code{tools::buildVignettes()}
      with \code{clean = FALSE} no longer remove any created files.
      \code{buildvignette()} gains a \code{keep} argument for more