@@ -18,6 +18,11 @@
       \item For consistency with \code{[dpqr]norm()},
       \code{[dp]lnorm(sdlog = 0)} model a point mass at
       \code{exp(mulog)} rather than return \code{NaN} (for an error).
+      
+      \item (OS X only.) Package \pkg{tcltk} checks if it is linked
+      against the CRAN X11-based Tcl/Tk and if so that the Tcl/Tk
+      component and the X11 libraries are installed.  This allows more
+      informative error messages to be given.
     }
   }
   
